--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
   <meta charset="utf-8">
 
-  <title>unity-homes.com</title>
+  <title>Unity-Homes</title>
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -12,6 +12,6 @@
 </head>
 
 <body>
-    <b><center>Welcome to www.unity-homes.com</center></b>
+    <b><center>Welcome to Unity-Homes!</center></b>
 </body>
 </html>
