--- a/public/views/contact.ejs
+++ b/public/views/contact.ejs
@@ -6,7 +6,7 @@
 
     <section name='jumbotron'>
       <div class='jumbotron text-center'>
-        <h3>Welcome to contact</h3>
+        <h3>There is nothing here</h3>
       </div>
     </section>
 
