--- a/public/views/properties.ejs
+++ b/public/views/properties.ejs
@@ -4,57 +4,54 @@
   <body>
     <% include ../includes/nav %>
 
-    <section name='jumbotron'>
-      <div class='jumbotron text-center'>
-
+    <div class='text-center'>
         <h3>Properties</h3>
+    </div>
 
-        <br />
+    <br />
 
-        <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-          <img class="card-img-top w-50" src="/images/house.png" alt="Property 1 Image">
-          <div class="card-body">
-            <h4 class="card-title">Property Address</h4>
-            <p class="card-text">Information about this property</p>
-            <a href="#" class="btn btn-primary">See More</a>
-          </div>
-        </div>
-
-        <br />
-
-        <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-          <img class="card-img-top w-50" src="/images/house.png" alt="Property 2 Image">
-          <div class="card-body">
-            <h4 class="card-title">Property Address</h4>
-            <p class="card-text">Information about this property</p>
-            <a href="#" class="btn btn-primary">See More</a>
-          </div>
-        </div>
-
-        <br />
-        
-        <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-          <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
-          <div class="card-body">
-            <h4 class="card-title">Property Address</h4>
-            <p class="card-text">Information about this property</p>
-            <a href="#" class="btn btn-primary">See More</a>
-          </div>
-        </div>
-
-        <br />
-
-        <nav aria-label="Page navigation">
-            <ul class="pagination justify-content-center">
-              <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-              <li class="page-item"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item"><a class="page-link" href="#">Next</a></li>
-            </ul>
-          </nav>
+    <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+      <img class="card-img-top w-50" src="/images/house.png" alt="Property 1 Image">
+      <div class="card-body">
+        <h4 class="card-title">Property Address</h4>
+        <p class="card-text">Information about this property</p>
+        <a href="#" class="btn btn-primary">See More</a>
       </div>
-    </section>
+    </div>
+
+    <br />
+
+    <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+      <img class="card-img-top w-50" src="/images/house.png" alt="Property 2 Image">
+      <div class="card-body">
+        <h4 class="card-title">Property Address</h4>
+        <p class="card-text">Information about this property</p>
+        <a href="#" class="btn btn-primary">See More</a>
+      </div>
+    </div>
+
+    <br />
+    
+    <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+      <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
+      <div class="card-body">
+        <h4 class="card-title">Property Address</h4>
+        <p class="card-text">Information about this property</p>
+        <a href="#" class="btn btn-primary">See More</a>
+      </div>
+    </div>
+
+    <br />
+
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center">
+        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+      </ul>
+    </nav>
 
     <% include ../includes/footer %>
 
