Adding login, register pages, CSS for responsive nav

--- a/public/views/properties.ejs
+++ b/public/views/properties.ejs
@@ -2,62 +2,68 @@
 <html lang="en">
   <% include ../includes/head %>
   <body>
-    <% include ../includes/nav %>
+    <div class="container">
+          
+      <% include ../includes/nav %>
 
-    <br />
-    
-    <div class='text-center'>
-        <h3>Properties</h3>
-    </div>
-
-    <br />
-    <br />
-
-    <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-      <img class="card-img-top w-50" src="/images/house.png" alt="Property 1 Image">
-      <div class="card-body">
-        <h4 class="card-title">Property Address</h4>
-        <p class="card-text">Information about this property</p>
-        <a href="#" class="btn btn-primary">See More</a>
+      <br />
+      
+      <div class="row ">
+        <div class="col-md-12 text-center">
+          <h3>Properties</h3>
+        </div>
       </div>
-    </div>
 
-    <br />
+      <br />
+      <br />
 
-    <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-      <img class="card-img-top w-50" src="/images/house.png" alt="Property 2 Image">
-      <div class="card-body">
-        <h4 class="card-title">Property Address</h4>
-        <p class="card-text">Information about this property</p>
-        <a href="#" class="btn btn-primary">See More</a>
+      <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+        <img class="card-img-top w-50" src="/images/house.png" alt="Property 1 Image">
+        <div class="card-body">
+          <h4 class="card-title">Property Address</h4>
+          <p class="card-text">Information about this property</p>
+          <a href="#" class="btn btn-primary">See More</a>
+        </div>
       </div>
-    </div>
 
-    <br />
-    
-    <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-      <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
-      <div class="card-body">
-        <h4 class="card-title">Property Address</h4>
-        <p class="card-text">Information about this property</p>
-        <a href="#" class="btn btn-primary">See More</a>
+      <br />
+
+      <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+        <img class="card-img-top w-50" src="/images/house.png" alt="Property 2 Image">
+        <div class="card-body">
+          <h4 class="card-title">Property Address</h4>
+          <p class="card-text">Information about this property</p>
+          <a href="#" class="btn btn-primary">See More</a>
+        </div>
       </div>
+
+      <br />
+      
+      <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+        <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
+        <div class="card-body">
+          <h4 class="card-title">Property Address</h4>
+          <p class="card-text">Information about this property</p>
+          <a href="#" class="btn btn-primary">See More</a>
+        </div>
+      </div>
+
+      <br />
+
+      <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+      </nav>
+      
+      <br />
+      
     </div>
 
-    <br />
-
-    <nav aria-label="Page navigation">
-      <ul class="pagination justify-content-center">
-        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-      </ul>
-    </nav>
-    
-    <br />
-    
     <% include ../includes/footer %>
 
     <% include ../includes/scripts %>
