--- a/public/includes/head.ejs
+++ b/public/includes/head.ejs
@@ -5,6 +5,7 @@
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link href="/css/sticky-footer.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
   
   <title>Unity Homes, LLC</title>
 
