--- a/public/includes/nav.ejs
+++ b/public/includes/nav.ejs
@@ -1,15 +1,23 @@
-<nav class="navbar navbar-toggleable-md" style="background-color: #e3f2fd;">
-    <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-toggleable-sm navbar-inverse bg-faded fixed-top" style="background-color: #800000;">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/home">Unity Homes</a>
-    </nav>
+    <a class="navbar-brand" href="/home">Unity Homes<span class="sr-only">(current)</span></a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/properties">Properties</a>
-            <a class="nav-item nav-link" href="/pay">Pay Rent</a>
-            <a class="nav-item nav-link" href="/contact">Contact Us</a>
-        </div>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a id="properties" class="nav-link" href="/properties">Properties</a>
+            </li>
+            <li class="nav-item">
+                <a id="app" class="nav-link" href="/app">Application</a>
+            </li>
+            <li class="nav-item">
+                <a id="contact" class="nav-link" href="/contact">Contact Us</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <a href="/register" class="btn btn-primary btn-md" role="button" aria-pressed="true">Register</a>
+            <a href="/login" class="btn btn-secondary btn-md" role="button" aria-pressed="true">Login</a>        
+        </ul>
     </div>
 </nav>
