--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -2,20 +2,25 @@
 <html lang="en">
   <% include ../includes/head %>
   <body>
-    <% include ../includes/nav %>
+    <div class="container">   
 
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+      <% include ../includes/nav %>
 
-    <div class='text-center'>
-      <h2>In progress...</h2>
-      <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+
+      <div class='text-center'>
+        <h2>In progress...</h2>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+        </div>
       </div>
+
     </div>
+
     <% include ../includes/footer %>
 
     <% include ../includes/scripts %>
