--- a/public/includes/nav.ejs
+++ b/public/includes/nav.ejs
@@ -2,7 +2,7 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="/home">Unity Homes<span class="sr-only">(current)</span></a>
+    <a id="home" class="navbar-brand" href="/home">Unity Homes<span class="sr-only">(current)</span></a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
