CSS for register and login tabs

--- a/public/includes/nav.ejs
+++ b/public/includes/nav.ejs
@@ -2,7 +2,7 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a id="home" class="navbar-brand" href="/home">Unity Homes<span class="sr-only">(current)</span></a>
+    <a class="navbar-brand" href="/home">Unity Homes<span class="sr-only">(current)</span></a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -16,8 +16,12 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <a href="/register" class="btn btn-primary btn-md" role="button" aria-pressed="true">Register</a>
-            <a href="/login" class="btn btn-secondary btn-md" role="button" aria-pressed="true">Login</a>        
+            <li class="nav-item">
+                <a id="register" class="nav-link" href="/register">Register</a>
+            </li>
+            <li>
+                <a href="/login" class="btn btn-outline-secondary btn-md" role="button" aria-pressed="true">Login</a>           
+            </li>    
         </ul>
     </div>
 </nav>
