--- a/public/includes/head.ejs
+++ b/public/includes/head.ejs
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link href="/css/sticky-footer.css" rel="stylesheet">
   <link href="/css/main.css" rel="stylesheet">
+
+  <script> if(window.location.pathname.slice(1) === 'login'){ document.write('<link href="/css/login.css" rel="stylesheet">') }</script>  
   
   <title>Unity Homes, LLC</title>
 
