--- a/public/views/app.ejs
+++ b/public/views/app.ejs
@@ -49,14 +49,20 @@
             </div>
           </div>
           <div class="text-center">
-            <button class="btn btn-success" type="submit">Submit</button>
-            <button class="btn btn-secondary" type="submit">Download</button>                        
+            <button class="btn btn-success" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
+            <button class="btn btn-secondary" data-toggle="modal" data-target="#inactiveModal" type="submit">Download</button>                        
           </div>
         </form>
 
         <br />
+
       </div>
-      <script>
+
+    <% include ../includes/inactiveModal %>
+
+    <% include ../includes/footer %>
+
+    <script>
       // VALIDATION
       (function() {
         "use strict";
@@ -71,9 +77,7 @@
           }, false);
         }, false);
       }());
-      </script>
-
-    <% include ../includes/footer %>
+    </script>
     
     <% include ../includes/scripts %>
   </body>
