--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -6,14 +6,28 @@
 
       <% include ../includes/nav %>
 
-      <section name='jumbotron'>
-        <div class='jumbotron text-center'>
-          <h3>There is nothing here</h3>
-        </div>
-      </section>
+      <br>
+
+      <div class="container">
+        <form class="form-signin">
+          <h2 class="form-signin-heading">Login</h2>
+          <label for="inputEmail" class="sr-only">Email address</label>
+          <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+          <label for="inputPassword" class="sr-only">Password</label>
+          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" value="remember-me"> Remember me
+            </label>
+          </div>
+          <button class="btn btn-md btn-default btn-block" data-toggle="modal" data-target="#inactiveModal" type="submit">Login</button>
+        </form>
+      </div>
 
     </div>
 
+    <% include ../includes/inactiveModal %>
+    
     <% include ../includes/footer %>
     
     <% include ../includes/scripts %>
