--- a/public/includes/head.ejs
+++ b/public/includes/head.ejs
@@ -7,7 +7,8 @@
   <link href="/css/sticky-footer.css" rel="stylesheet">
   <link href="/css/main.css" rel="stylesheet">
 
-  <script> if(window.location.pathname.slice(1) === 'login'){ document.write('<link href="/css/login.css" rel="stylesheet">') }</script>  
+  <script> if(window.location.pathname.slice(1) === 'login' || 'register'){ document.write('<link href="/css/login.css" rel="stylesheet">') }</script>  
+  <script> if(window.location.pathname.slice(1) === 'contact'){ document.write('<link href="/css/contact.css" rel="stylesheet">') }</script>  
   
   <title>Unity Homes, LLC</title>
 
