--- a/public/views/contact.ejs
+++ b/public/views/contact.ejs
@@ -6,16 +6,57 @@
           
       <% include ../includes/nav %>
 
-      <section name='jumbotron'>
-        <div class='jumbotron text-center'>
-          <h3>There is nothing here</h3>
+      <div class="container">
+        <div class="row">              
+          <div class="col-md-7" id="contactForm">
+            <form role="form">
+                <h2 class="form-signin-heading">Contact</h2>
+                <div class="form-group">
+                <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number">
+              </div>
+              <div class="form-group">
+                <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+                <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>                 
+              </div>
+              <div class="text-center">
+                  <button class="btn btn-success" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
+              </div>
+            </form>
+          </div>
         </div>
-      </section>
+      </div>
 
     </div>
 
+    <% include ../includes/inactiveModal %>    
+
     <% include ../includes/footer %>
-    
+
+    <script>
+      // VALIDATION
+      (function() {
+        "use strict";
+        window.addEventListener("load", function() {
+          var form = document.getElementById("needs-validation");
+          form.addEventListener("submit", function(event) {
+            if (form.checkValidity() == false) {
+              event.preventDefault();
+              event.stopPropagation();
+            }
+            form.classList.add("was-validated");
+          }, false);
+        }, false);
+      }());
+    </script>
+
     <% include ../includes/scripts %>
+
+    <script src="/js/contact.js"></script>
   </body>
 </html>
