--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -8,55 +8,34 @@
 
       <br />
 
-      <div class="row ">
-        <div class="col-md-12 text-center">
-          <h3>Register</h3>
-        </div>
+      <div id='register'>
+        <form class="container" id="needs-validation" novalidate>
+          <h2 class="form-signin-heading">
+            Register
+          </h2>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="registrationCode" class="sr-only">Registration Code</label>              
+              <input type="text" class="form-control" id="validation1" placeholder="Registration Code" required autofocus>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 mb-2">
+              <label for="password" class="sr-only">Password</label>              
+              <input type="password" class="form-control" id="validation2" placeholder="Password" required>
+            </div>
+          </div>
+          <div class="row">  
+            <div class="col-md-12 mb-2">
+              <label for="confirmPassword" class="sr-only">Confirm Password</label>              
+              <input type="password" class="form-control" id="validation3" placeholder="Confirm Password" required>
+            </div>
+          </div>
+          <div class="text-center">
+            <button class="btn btn-success" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
+          </div>
+        </form>
       </div>
-
-      <br />
-      <br />
-
-      <form class="container" id="needs-validation" novalidate>
-        <div class="row">
-          <div class="col-md-3 mb-3">
-            <label for="validationCustom01">First Name</label>
-            <input type="text" class="form-control" id="validation1" placeholder="First Name" required>
-          </div>
-          <div class="col-md-3 mb-3">
-            <label for="validationCustom02">Last Name</label>
-            <input type="text" class="form-control" id="validation2" placeholder="Last Name" required>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3 mb-3">
-            <label for="validationCustom03">Address</label>
-            <input type="text" class="form-control" id="validation3" placeholder="Address" required>
-          </div>
-          <div class="col-md-3 mb-3">
-            <label for="validationCustom03">City</label>
-            <input type="text" class="form-control" id="validation4" placeholder="City" required>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3 mb-3">
-            <label for="validationCustom04">State</label>
-            <input type="text" class="form-control" id="validation5" placeholder="State" required>
-          </div>
-          <div class="col-md-2 mb-3">
-            <label for="validationCustom05">Zip</label>
-            <input type="text" class="form-control" id="validation6" placeholder="Zip" required>
-          </div>
-        </div>
-        <div class="text-center">
-          <button class="btn btn-success" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
-          <button class="btn btn-secondary" data-toggle="modal" data-target="#inactiveModal" type="submit">Download</button>                        
-        </div>
-      </form>
-
-      <br />
-
-    </div>
 
     </div>
 
