Adding Details to property, buton CSS

--- a/public/views/app.ejs
+++ b/public/views/app.ejs
@@ -20,36 +20,60 @@
       <form class="container" id="needs-validation" novalidate>
           <div class="row">
             <div class="col-md-3 mb-3">
-              <label for="validationCustom01">First Name</label>
-              <input type="text" class="form-control" id="validation1" placeholder="First Name" required>
+              <label for="firstName">First Name</label>
+              <input type="text" class="form-control" id="firstName" placeholder="First Name" required>
             </div>
             <div class="col-md-3 mb-3">
-              <label for="validationCustom02">Last Name</label>
-              <input type="text" class="form-control" id="validation2" placeholder="Last Name" required>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-3 mb-3">
-              <label for="validationCustom03">Address</label>
-              <input type="text" class="form-control" id="validation3" placeholder="Address" required>
+              <label for="middleName">Middle Name</label>
+              <input type="text" class="form-control" id="middleName" placeholder="Last Name" required>
             </div>
             <div class="col-md-3 mb-3">
-              <label for="validationCustom03">City</label>
-              <input type="text" class="form-control" id="validation4" placeholder="City" required>
+              <label for="lastName">Last Name</label>
+              <input type="text" class="form-control" id="lastName" placeholder="Last Name" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-3 mb-3">
-              <label for="validationCustom04">State</label>
-              <input type="text" class="form-control" id="validation5" placeholder="State" required>
+              <label for="dob">Date of Birth</label>
+              <input type="text" class="form-control" id="dob" placeholder="XX/XX/XXXX" required>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="ssn">Social Security Number</label>
+              <input type="text" class="form-control" id="ssn" placeholder="SSN #" required>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3 mb-3">
+              <label for="cAddress">Current Address</label>
+              <input type="text" class="form-control" id="cAddress" placeholder="Address" required>
+            </div>
+            <div class="col-md-3 mb-3">
+              <label for="cCity">Current City</label>
+              <input type="text" class="form-control" id="cCity" placeholder="City" required>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3 mb-3">
+              <label for="cState">Current State</label>
+              <input type="text" class="form-control" id="cState" placeholder="State" required>
             </div>
             <div class="col-md-2 mb-3">
-              <label for="validationCustom05">Zip</label>
-              <input type="text" class="form-control" id="validation6" placeholder="Zip" required>
+              <label for="cZip">Current Zip</label>
+              <input type="text" class="form-control" id="cZip" placeholder="Zip" required>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3 mb-3">
+              <label for="email">Email</label>
+              <input type="text" class="form-control" id="email" placeholder="Email" required>
+            </div>
+            <div class="col-md-2 mb-3">
+              <label for="cell">Phone Number</label>
+              <input type="text" class="form-control" id="cell" placeholder="xxx-xxx-xxxx" required>
             </div>
           </div>
           <div class="text-center">
-            <button class="btn btn-success" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
+            <button class="btn btn-default" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
             <button class="btn btn-secondary" data-toggle="modal" data-target="#inactiveModal" type="submit">Download</button>                        
           </div>
         </form>
