--- a/public/views/contact.ejs
+++ b/public/views/contact.ejs
@@ -18,14 +18,14 @@
                 <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number">
+                <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
               </div>
               <div class="form-group">
-                <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+                <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="250" rows="7"></textarea>
                 <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>                 
               </div>
               <div class="text-center">
-                  <button class="btn btn-success" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
+                  <button class="btn btn-default" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
               </div>
             </form>
           </div>
