--- a/public/views/properties.ejs
+++ b/public/views/properties.ejs
@@ -10,40 +10,76 @@
       
       <div class="row ">
         <div class="col-md-12 text-center">
-          <h3>Properties</h3>
+            <h2>Properties</h2>
         </div>
       </div>
 
       <br />
 
-      <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-        <img class="card-img-top w-50" src="/images/house.png" alt="Property 1 Image">
-        <div class="card-body">
-          <h4 class="card-title">Property Address</h4>
-          <p class="card-text">Information about this property</p>
-          <a href="#" class="btn btn-primary">See More</a>
+      <div class="row">
+        <div class="col-md-6 mr-2">
+          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+            <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
+            <div class="card-body">
+              <h4 class="card-title">Big Image Here</h4>
+              <p class="card-text">Property Address</p>
+              <a href="#" class="btn btn-primary">See More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 mb-1">
+          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+            <div class="card-body">
+              <h4 class="card-title">Details</h4>
+              <p class="card-text">Number of rooms, fence, sq ft, etc.</p>
+            </div>
+          </div>
         </div>
       </div>
 
       <br />
 
-      <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-        <img class="card-img-top w-50" src="/images/house.png" alt="Property 2 Image">
-        <div class="card-body">
-          <h4 class="card-title">Property Address</h4>
-          <p class="card-text">Information about this property</p>
-          <a href="#" class="btn btn-primary">See More</a>
+      <div class="row">
+        <div class="col-md-6 mr-2">
+          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+            <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
+            <div class="card-body">
+              <h4 class="card-title">Big Image Here</h4>
+              <p class="card-text">Property Address</p>
+              <a href="#" class="btn btn-primary">See More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 mb-1">
+          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+            <div class="card-body">
+              <h4 class="card-title">Details</h4>
+              <p class="card-text">Number of rooms, fence, sq ft, etc.</p>
+            </div>
+          </div>
         </div>
       </div>
 
       <br />
-      
-      <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-        <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
-        <div class="card-body">
-          <h4 class="card-title">Property Address</h4>
-          <p class="card-text">Information about this property</p>
-          <a href="#" class="btn btn-primary">See More</a>
+
+      <div class="row">
+        <div class="col-md-6 mr-2">
+          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+            <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
+            <div class="card-body">
+              <h4 class="card-title">Big Image Here</h4>
+              <p class="card-text">Property Address</p>
+              <a href="#" class="btn btn-primary">See More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 mb-1">
+          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+            <div class="card-body">
+              <h4 class="card-title">Details</h4>
+              <p class="card-text">Number of rooms, fence, sq ft, etc.</p>
+            </div>
+          </div>
         </div>
       </div>
 
