--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -32,7 +32,7 @@
             </div>
           </div>
           <div class="text-center">
-            <button class="btn btn-success" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
+            <button class="btn btn-default" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
           </div>
         </form>
       </div>
