Fixing alignment in mobile nav

--- a/public/includes/nav.ejs
+++ b/public/includes/nav.ejs
@@ -17,7 +17,7 @@
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a id="register" class="nav-link" href="/register">Register</a>
+                <a id="register" class="nav-link left" href="/register">Register</a>
             </li>
             <li>
                 <a href="/login" class="btn btn-outline-secondary btn-md" role="button" aria-pressed="true">Login</a>           
