--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -22,13 +22,16 @@
           <div class="row">
             <div class="col-md-12 mb-2">
               <label for="password" class="sr-only">Password</label>              
-              <input type="password" class="form-control" id="validation2" placeholder="Password" required>
+              <input type="password" class="form-control" id="password" placeholder="Password" required>
+              <small id="passwordHelpInline" class="text-muted">
+                  Must be 8-20 characters long.
+              </small>
             </div>
           </div>
           <div class="row">  
             <div class="col-md-12 mb-2">
               <label for="confirmPassword" class="sr-only">Confirm Password</label>              
-              <input type="password" class="form-control" id="validation3" placeholder="Confirm Password" required>
+              <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
             </div>
           </div>
           <div class="text-center">
