--- a/public/includes/footer.ejs
+++ b/public/includes/footer.ejs
@@ -1,5 +1,3 @@
-<footer class='footer'>
-	<div class='container'>
-		<p class='text-center text-muted'>© Copyright 2017</p>
-	</div>
+<footer class='footer text-center'>
+	<span class='text-muted'>© Copyright 2017</span>
 </footer>
