--- a/public/resources/css/sticky-footer.css
+++ b/public/resources/css/sticky-footer.css
@@ -12,7 +12,7 @@ html {
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 60px;
-    line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
-  }
+    line-height: 60px;
+}
 
