Adding router, api, user and owner

--- a/public/views/contact.ejs
+++ b/public/views/contact.ejs
@@ -22,7 +22,6 @@
               </div>
               <div class="form-group">
                 <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="250" rows="7"></textarea>
-                <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>                 
               </div>
               <div class="text-center">
                   <button class="btn btn-default" data-toggle="modal" data-target="#inactiveModal" type="submit">Submit</button>
@@ -45,7 +44,7 @@
         window.addEventListener("load", function() {
           var form = document.getElementById("needs-validation");
           form.addEventListener("submit", function(event) {
-            if (form.checkValidity() == false) {
+            if (form.checkValidity() === false) {
               event.preventDefault();
               event.stopPropagation();
             }
@@ -57,6 +56,5 @@
 
     <% include ../includes/scripts %>
 
-    <script src="/js/contact.js"></script>
   </body>
 </html>
