--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -5,31 +5,38 @@
     <div class="container">
 
       <% include ../includes/nav %>
-
+      
+      <% include ../includes/invalidLoginModal %>
+      
       <br>
 
-      <div class="container">
-        <form class="form-signin">
+      <% if (!(typeof invalid == 'undefined')) { %>
+        <% if (invalid) { %>
+          <div class="alert alert-danger" role="alert">
+            <h4 class="alert-heading text-center">Invalid Username or Password!</h4>
+          </div>      
+      <% } %>
+      <% } %>
+      <div class="form-group form-signin">
+        <form action="/login" method="post">
           <h2 class="form-signin-heading">Login</h2>
-          <label for="inputEmail" class="sr-only">Email address</label>
-          <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-          <label for="inputPassword" class="sr-only">Password</label>
-          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+          <label for="email" class="sr-only">Email</label>
+          <input type="email" name="email" class="form-control form-control-warning" placeholder="Email" required autofocus>
+          <label for="password" class="sr-only">Password</label>
+          <input type="password" name="password" id="password" class="form-control form-control-warning" placeholder="Password" required>
           <div class="checkbox">
             <label>
-              <input type="checkbox" value="remember-me"> Remember me
+              <input type="checkbox" id="rememberMe" value="remember-me"> Remember me
             </label>
           </div>
-          <button class="btn btn-md btn-default btn-block" data-toggle="modal" data-target="#inactiveModal" type="submit">Login</button>
+          <button class="btn btn-md btn-default btn-block" type="submit">Login</button>
         </form>
       </div>
-      
     </div>
-
-    <% include ../includes/inactiveModal %>
 
     <% include ../includes/footer %>
     
     <% include ../includes/scripts %>
+
   </body>
 </html>
