--- a/public/views/properties.ejs
+++ b/public/views/properties.ejs
@@ -6,6 +6,8 @@
           
       <% include ../includes/nav %>
 
+      <% include ../includes/imagesModal %>
+      
       <br />
       
       <div class="row ">
@@ -17,13 +19,36 @@
       <br />
 
       <div class="row">
-        <div class="col-md-6 mr-2">
+        <div class="col-md-6">
           <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
             <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
             <div class="card-body">
               <h4 class="card-title">Big Image Here</h4>
               <p class="card-text">Property Address</p>
-              <a href="#" class="btn btn-primary">See More</a>
+              <a href="#" class="btn btn-primary imageButton" data-toggle="modal" data-target="#imagesModal">See More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 mb-1">
+          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+            <div class="card-body">
+              <h4 class="card-title">Details</h4>
+              <p class="card-text">Number of rooms, fence, sq ft, etc.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <br />
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+            <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
+            <div class="card-body">
+              <h4 class="card-title">Big Image Here</h4>
+              <p class="card-text">Property Address</p>
+              <a href="#" class="btn btn-primary imageButton" data-toggle="modal" data-target="#imagesModal">See More</a>
             </div>
           </div>
         </div>
@@ -40,36 +65,13 @@
       <br />
 
       <div class="row">
-        <div class="col-md-6 mr-2">
+        <div class="col-md-6">
           <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
             <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
             <div class="card-body">
               <h4 class="card-title">Big Image Here</h4>
               <p class="card-text">Property Address</p>
-              <a href="#" class="btn btn-primary">See More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-5 mb-1">
-          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-            <div class="card-body">
-              <h4 class="card-title">Details</h4>
-              <p class="card-text">Number of rooms, fence, sq ft, etc.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <br />
-
-      <div class="row">
-        <div class="col-md-6 mr-2">
-          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-            <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
-            <div class="card-body">
-              <h4 class="card-title">Big Image Here</h4>
-              <p class="card-text">Property Address</p>
-              <a href="#" class="btn btn-primary">See More</a>
+              <a href="#" class="btn btn-primary imageButton" data-toggle="modal" data-target="#imagesModal">See More</a>
             </div>
           </div>
         </div>
