--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -6,32 +6,37 @@
 
       <% include ../includes/nav %>
 
+      <% include ../includes/inactiveModal %>
+
       <br />
 
       <div id='register'>
-        <form class="container" id="needs-validation" novalidate>
+        <form class="container" action="/registerUser" method="post" id="needs-validation" novalidate>
           <h2 class="form-signin-heading">
             Register
           </h2>
           <div class="row">              
             <div class="col-md-12 mb-2">
-              <label for="registrationCode" class="sr-only">Registration Code</label>              
-              <input type="text" class="form-control" id="validation1" placeholder="Registration Code" required autofocus>
+              <label for="code" class="sr-only">Registration Code</label>              
+              <input type="text" class="form-control" id="code" placeholder="Registration Code" required autofocus>
+            </div>
+          </div>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="email" class="sr-only">Email</label>              
+              <input type="text" class="form-control" id="email" placeholder="Email" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 mb-2">
-              <label for="password" class="sr-only">Password</label>              
+              <label for="password" class="sr-only">Password</label>         
               <input type="password" class="form-control" id="password" placeholder="Password" required>
-              <small id="passwordHelpInline" class="text-muted">
-                  Must be 8-20 characters long.
-              </small>
             </div>
           </div>
           <div class="row">  
             <div class="col-md-12 mb-2">
               <label for="confirmPassword" class="sr-only">Confirm Password</label>              
-              <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
+              <input type="password" class="form-control" id="confirmPassword"  placeholder="Confirm Password" required>
             </div>
           </div>
           <div class="text-center">
@@ -42,11 +47,10 @@
 
     </div>
 
-    <% include ../includes/inactiveModal %>
-
     <% include ../includes/footer %>
 
-    <script>
+    <% include ../includes/scripts %>
+        <script>
       // VALIDATION
       (function() {
         "use strict";
@@ -62,7 +66,6 @@
         }, false);
       }());
     </script>
-
-    <% include ../includes/scripts %>
+    <script src='/js/passwordPopover.js'></script>
   </body>
 </html>
