--- a/public/views/tenant.ejs
+++ b/public/views/tenant.ejs
@@ -10,8 +10,11 @@
     <br />
 
     <h2>Welcome Tenant</h2>
-    
-    <% include ../includes/scripts %>
+    <br />
+    <h4>
+      Login time: <%= time %>
+    </h4>
 
+    <% include ../includes/scripts %>
   </body>
 </html>
