Fixing active links glitch

--- a/public/includes/nav.ejs
+++ b/public/includes/nav.ejs
@@ -9,7 +9,7 @@
                 <a id="properties" class="nav-link" href="/properties">Properties</a>
             </li>
             <li class="nav-item">
-                <a id="app" class="nav-link" href="/apply">Apply</a>
+                <a id="apply" class="nav-link" href="/apply">Apply</a>
             </li>
             <li class="nav-item">
                 <a id="contact" class="nav-link" href="/contact">Contact Us</a>
