--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -25,7 +25,8 @@
       <% } %>
 
       <div id='register'>
-        <form class="container" action="/register" method="post" novalidate>
+        <form class="container" action="/register" method="post">
+          <input type="hidden" name="_csrf" value=" <%= csrfToken %>">
           <h2 class="form-signin-heading">
             Register
           </h2>
