Proper implementation of safe-regex

--- a/public/views/registered.ejs
+++ b/public/views/registered.ejs
@@ -6,7 +6,7 @@
 
     <br />      
     <br />
-    <a href="/login">Back</a>
+    <a href="/register">Back</a>
     <br />
 
     <h2>Registration Successful!</h2>
