--- a/public/views/owner.ejs
+++ b/public/views/owner.ejs
@@ -12,8 +12,54 @@
     <h2>Welcome Owner</h2>
     <br />
     <h4>
-      Login time: <%= time %>
+      Time: <%= time %>
     </h4>
+
+      <% if (!(typeof insertSuccess == 'undefined')) { %>
+        <% if (!insertSuccess) { %>
+          <div class="alert alert-danger" role="alert">
+            <h4 class="alert-heading text-center">Insertion Unsuccessful!</h4>
+          </div>      
+        <% } %>
+        <% if (insertSuccess) { %>
+          <div class="alert alert-success" role="alert">
+            <h4 class="alert-heading text-center">Insertion Successful!</h4>
+          </div>      
+        <% } %>
+      <% } %>
+
+      <% if (!(typeof deleteSuccess == 'undefined')) { %>
+        <% if (!deleteSuccess) { %>
+          <div class="alert alert-danger" role="alert">
+            <h4 class="alert-heading text-center">Deletion Unsuccessful!</h4>
+          </div>      
+        <% } %>
+        <% if (deleteSuccess) { %>
+          <div class="alert alert-success" role="alert">
+            <h4 class="alert-heading text-center">Deletion Successful!</h4>
+          </div>      
+        <% } %>
+      <% } %>
+
+      <div class="form-group form-signin">
+        <form action="/owner/add" method="post">
+          <h2 class="form-signin-heading">Add Tenant Account</h2>
+          <label for="email" class="sr-only">Email</label>
+          <input type="email" name="email" class="form-control form-control-warning" placeholder="Email" required autofocus>
+          <label for="code" class="sr-only">Code</label>
+          <input type="number" name="code" class="form-control form-control-warning" placeholder="Code" required>
+          <button class="btn btn-md btn-default btn-block" type="submit">Submit</button>
+        </form>
+      </div>
+
+      <div class="form-group form-signin">
+        <form action="/owner/delete" method="post">
+          <h2 class="form-signin-heading">Delete Tenant Account</h2>
+          <label for="email" class="sr-only">Email</label>
+          <input type="email" name="email" class="form-control form-control-warning" placeholder="Email" required autofocus>
+          <button class="btn btn-md btn-default btn-block" type="submit">Submit</button>
+        </form>
+      </div>
 
     <% include ../includes/scripts %>
   </body>
