--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -24,10 +24,10 @@
           <label for="email" class="sr-only">Email</label>
           <input type="email" name="email" class="form-control form-control-warning" placeholder="Email" required autofocus>
           <label for="password" class="sr-only">Password</label>
-          <input type="password" name="password" id="password" class="form-control form-control-warning" placeholder="Password" required>
+          <input type="password" name="password" class="form-control form-control-warning" placeholder="Password" required>
           <div class="checkbox">
             <label>
-              <input type="checkbox" id="rememberMe" value="remember-me"> Remember me
+              <input type="checkbox" value="remember-me"> Remember me
             </label>
           </div>
           <button class="btn btn-md btn-default btn-block" type="submit">Login</button>
