--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -17,7 +17,7 @@
       <% } %>
 
       <% if (!(typeof match == 'undefined')) { %>
-        <% if (match) { %>
+        <% if (!match) { %>
           <div class="alert alert-danger" role="alert">
             <h4 class="alert-heading text-center">Mismatched Passwords!</h4>
           </div>      
@@ -32,25 +32,25 @@
           <div class="row">              
             <div class="col-md-12 mb-2">
               <label for="code" class="sr-only">Registration Code</label>              
-              <input type="text" class="form-control" name="code" id="code" placeholder="Registration Code" required autofocus>
+              <input type="text" class="form-control" name="code" placeholder="Registration Code" required autofocus>
             </div>
           </div>
           <div class="row">              
             <div class="col-md-12 mb-2">
               <label for="email" class="sr-only">Email</label>              
-              <input type="text" class="form-control" name="email" id="email" placeholder="Email" required>
+              <input type="text" class="form-control" name="email" placeholder="Email" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 mb-2">
               <label for="password" class="sr-only">Password</label>         
-              <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
+              <input type="password" class="form-control" name="password" placeholder="Password" required>
             </div>
           </div>
           <div class="row">  
             <div class="col-md-12 mb-2">
-              <label for="confirmPassword" class="sr-only">Confirm Password</label>              
-              <input type="password" class="form-control" name="confirmPassword" id="confirmPassword"  placeholder="Confirm Password" required>
+              <label for="passwordTwo" class="sr-only">Confirm Password</label>              
+              <input type="password" class="form-control" name="passwordTwo" placeholder="Confirm Password" required>
             </div>
           </div>
           <div class="text-center">
