--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -44,7 +44,7 @@
           <div class="row">
             <div class="col-md-12 mb-2">
               <label for="password" class="sr-only">Password</label>         
-              <input type="password" class="form-control" name="password" placeholder="Password" required>
+              <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
             </div>
           </div>
           <div class="row">  
