--- a/public/dashboard_tenant/tenant.ejs
+++ b/public/dashboard_tenant/tenant.ejs
@@ -8,7 +8,7 @@
       <a href="/logout">Logout</a>
       <br />
 
-      <h2>Welcome, Tenant.</h2>
+      <h2>Welcome, <%- fullName %>.</h2>
       <br />
       <h4>
         Time: <%= time %>
