--- a/public/dashboard_admin/adminUsers/adminUsers.ejs
+++ b/public/dashboard_admin/adminUsers/adminUsers.ejs
@@ -40,7 +40,7 @@
           <div class="alert alert-danger" role="alert">
             <h4 class="alert-heading text-center">Mismatched Passwords!</h4>
           </div>      
-      <% } %>
+        <% } %>
       <% } %>
 
       <div id="register">
@@ -52,6 +52,24 @@
             <div class="col-md-12 mb-2">
               <label for="email" class="sr-only">Email</label>              
               <input type="text" class="form-control" name="email" placeholder="Email" required>
+            </div>
+          </div>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="firstName" class="sr-only">First Name</label>              
+              <input type="text" class="form-control" name="firstName" placeholder="First Name" required>
+            </div>
+          </div>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="middleName" class="sr-only">Middle Name</label>              
+              <input type="text" class="form-control" name="middleName" placeholder="Middle Name">
+            </div>
+          </div>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="lastName" class="sr-only">Last Name</label>              
+              <input type="text" class="form-control" name="lastName" placeholder="Last Name" required>
             </div>
           </div>
           <div class="row">
