--- a/public/dashboard_admin/regUsers/regUsers.ejs
+++ b/public/dashboard_admin/regUsers/regUsers.ejs
@@ -54,6 +54,24 @@
               <input type="text" class="form-control" name="email" placeholder="Email" required>
             </div>
           </div>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="firstName" class="sr-only">First Name</label>              
+              <input type="text" class="form-control" name="firstName" placeholder="First Name" required>
+            </div>
+          </div>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="middleName" class="sr-only">Middle Name</label>              
+              <input type="text" class="form-control" name="middleName" placeholder="Middle Name">
+            </div>
+          </div>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="lastName" class="sr-only">Last Name</label>              
+              <input type="text" class="form-control" name="lastName" placeholder="Last Name" required>
+            </div>
+          </div>
           <div class="row">
             <div class="col-md-12 mb-2">
               <label for="password" class="sr-only">Password</label>         
