--- a/public/dashboard_admin/unregUsers/unregUsers.ejs
+++ b/public/dashboard_admin/unregUsers/unregUsers.ejs
@@ -35,11 +35,35 @@
         <% } %>
       <% } %>
 
-      <div class="form-group form-signin">
-        <form action="/unregUsers/create" method="post">
-          <h2 class="form-signin-heading">Add Unregistered Account</h2>
-          <label for="email" class="sr-only">Email</label>
-          <input type="email" name="email" class="form-control form-control-warning" placeholder="Email" required autofocus>
+      <div id="register">
+        <form class="container" action="/unregUsers/create" method="post">
+          <h2 class="form-signin-heading">
+            Add Unregistered Account
+          </h2>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="email" class="sr-only">Email</label>              
+              <input type="text" class="form-control" name="email" placeholder="Email" required>
+            </div>
+          </div>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="firstName" class="sr-only">First Name</label>              
+              <input type="text" class="form-control" name="firstName" placeholder="First Name" required>
+            </div>
+          </div>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="middleName" class="sr-only">Middle Name</label>              
+              <input type="text" class="form-control" name="middleName" placeholder="Middle Name">
+            </div>
+          </div>
+          <div class="row">              
+            <div class="col-md-12 mb-2">
+              <label for="lastName" class="sr-only">Last Name</label>              
+              <input type="text" class="form-control" name="lastName" placeholder="Last Name" required>
+            </div>
+          </div>
           <button class="btn btn-md btn-default btn-block" type="submit">Submit</button>
         </form>
       </div>
